[ BUGFIX ] - dropdown mis-alignment fixed

--- a/src/drop-down/style.scss
+++ b/src/drop-down/style.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0 0.8rem;
+  // margin: 0 0.8rem;
 }
 
 .dropdown-select {
